--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="overlay fade-out has-fade"> </div>
     <nav class="container container--pall flex flex-jc-sb flex-ai-c container">
       <a href="/" class="hearder__logo">
-        <img src="images/logo.svg" alt="Easybank">
+        <img src="./images/logo.svg" alt="Easybank">
       </a>
 
 
@@ -74,7 +74,7 @@
       </div>
       <div class="feature__grid">
         <div class="feature__item">
-          <div class="feature__icon"><img src="/images/icon-online.svg" alt=""></div>
+          <div class="feature__icon"><img src="./images/icon-online.svg" alt=""></div>
           <div class="feature__title">
             Online Banking
           </div>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="feature__item">
-          <div class="feature__icon"><img src="/images/icon-budgeting.svg" alt=""></div>
+          <div class="feature__icon"><img src="./images/icon-budgeting.svg" alt=""></div>
           <div class="feature__title">
             Simple Budgeting
           </div>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="feature__item">
-          <div class="feature__icon"><img src="/images/icon-onboarding.svg" alt=""></div>
+          <div class="feature__icon"><img src="./images/icon-onboarding.svg" alt=""></div>
           <div class="feature__title">
             Fast Onboarding
           </div>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="feature__item">
-          <div class="feature__icon"><img src="/images/icon-online.svg" alt=""></div>
+          <div class="feature__icon"><img src="./images/icon-online.svg" alt=""></div>
           <div class="feature__title">
             Open API
           </div>
@@ -172,15 +172,15 @@
     <div class="container">
       
       <a class="footer__logo" href="#">
-        <img src="/images//logo-dark.svg" alt="">
+        <img src="./images//logo-dark.svg" alt="">
       </a>
 
       <div class="footer__social">
-        <a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a>
-        <a href="#"><img src="images/icon-youtube.svg" alt="youtube"></a>
-        <a href="#"><img src="images/icon-twitter.svg" alt="twitter"></a>
-        <a href="#"><img src="images/icon-pinterest.svg" alt="pinterest"></a>
-        <a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a>
+        <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
+        <a href="#"><img src="./images/icon-youtube.svg" alt="youtube"></a>
+        <a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a>
+        <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
+        <a href="#"><img src="./images/icon-instagram.svg" alt="instagram"></a>
       </div>
 
       <div class="footer__links col1">
