--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="container">
       
       <a class="footer__logo" href="#">
-        <img src="./images//logo-dark.svg" alt="">
+        <img src="./images/logo-dark.svg" alt="">
       </a>
 
       <div class="footer__social">
